--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="btnvideo">Capturar Video</string>
     <string name="btncapturarvideo">Capturar video</string>
     <string name="btncompartir">Compartir video</string>
+    <string name="btnguardar">Guardar video</string>
 </resources>
