funcion compartir correcta

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="btncapturarvideo">Capturar video</string>
     <string name="btncompartir">Compartir video</string>
     <string name="btnguardar">Guardar video</string>
+    <string name="btncompartirfoto">Compartir Foto</string>
 </resources>
